build(distribution): Add MacOS ARM.